<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding ="true">
    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <LinearLayout
        android:id="@+id/main_tab"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDisable" />

        <com.elephantgroup.blog.custom.RippleLinearView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayBg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/main_home"
                style="@style/main_tab_tv_style"
                android:drawableTop="@drawable/main_home_icon"
                android:text="@string/main_home" />

            <TextView
                android:id="@+id/main_goods"
                style="@style/main_tab_tv_style"
                android:drawableTop="@drawable/main_goods_icon"
                android:text="@string/main_good" />

            <TextView
                android:id="@+id/main_myself"
                style="@style/main_tab_tv_style"
                android:drawableTop="@drawable/myself_icon"
                android:text="@string/myself" />
        </com.elephantgroup.blog.custom.RippleLinearView>
    </LinearLayout>
</LinearLayout>